# praxis-os

./: .clinerules  .cursorrules  .gitignore  .mcp.json  .pre-commit-config.yaml  .yamllint  AI-AGENT-PERSPECTIVE-Agent-OS-Enhanced.md  ALIGNMENT-ANALYSIS.md  ARCHITECTURAL-DECISION-Workflow-Creation-Systems-Location.md  CLARIFICATION - Framework History.md  COMPREHENSIVE-STANDARDS-CORRELATION-MATRIX.md  CONTRIBUTING.md  CURSOR-AGENT-PERSPECTIVE-Agent-OS-Enhanced.md  DESIGN-DOC-Divio-Documentation-Restructure.md  DESIGN-DOC-RAG-Content-Optimization.md  DUAL-TRANSPORT-ARCHITECTURE.md  DUAL-TRANSPORT-VALIDATION-SUMMARY.md  FINAL-RECOMMENDATION-Interactive-Workflow-Creation.md  IMPLEMENTATION-SUMMARY.md  LANGUAGE-AGNOSTIC-ANALYSIS.md  LICENSE  Language-Agnostic Test Generation Framework Design.md  MISSING-OPERATIONAL-PROCEDURES-DETAILED.md  README.md  RECOMMENDED-STRUCTURE.md  REVISED-RECOMMENDATION-Workflow-Creation-Systems.md  SKELETON-VS-CONSUMER-BOUNDARIES.md  STANDARDS-GAP-ANALYSIS.md  divio-compliance-report.md  installation-guide.md  mcp_tool_cli.py  pyproject.toml  test_mcp_access.sh  test_mcp_client.py  tox.ini
.agent-os/: .cursorrules  .upgrade_lock  DOGFOODING_README.md  UPDATE_LOG.txt  UPGRADE_SUMMARY_20251008.md
.agent-os.backup.20251008_193031/: DOGFOODING_README.md  INSTALLATION_SUMMARY.md  VERSION.txt  config.json
.agent-os.backup.20251008_193031/state/: ed5481fe-7334-427c-bea4-c8e6103a592b.json
.agent-os/docs/: CLINE-INTEGRATION-GUIDE.md  github-issue-update.md
.agent-os/mcp_server/: __main__.py  framework_generator.py  port_manager.py  project_info.py  report_generator.py  server_manager.py  transport_manager.py  validation_module.py  workflow_engine.py  workflow_validator.py
.agent-os/scripts/: build_rag_index.py
.agent-os/specs/: cache-analysis-2025-10-13.md  generated-standards-creation-v1-definition.yaml  session-history-analysis-cline-2025-10-14.md  (+7 more)
.claude/: CLAUDE.md  settings.local.json
.clinerules/: agent-os-orientation.md  praxis-os-orientation.md
.cursor/: mcp.json
.praxis-os/: .cursorrules  .mcp_server_state.json  DOGFOODING_README.md  INSTALLATION_SUMMARY.md  UPGRADE_SUMMARY_20251008.md  VERSION.txt  config.json
docs/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
installation/: .cursorrules  00-START.md  01-directories.md  02-copy-files.md  03-cursorrules.md  04-gitignore.md  04-venv-mcp.md  05-validate.md  05-venv-mcp.md  06-validate.md  README.md  SYSTEM-SUMMARY.md
language-instructions/: csharp.md  go.md  java.md  javascript.md  python.md  rust.md  test-generation-template.md  typescript.md
mcp_server/: CHANGELOG.md  README.md  __init__.py  __main__.py  backup_manager.py  chunker.py  dependency_installer.py  framework_generator.py  observability-integration.md  project_info.py  rag_engine.py  report_generator.py  requirements.txt  server_manager.py  state_manager.py  validation_module.py  workflow_engine.py
meta-framework/: AGENT_OS_FRAMEWORK_CREATION_GUIDE.md  DISTRIBUTION_GUIDE.md  META_FRAMEWORK_SUMMARY.md  QUICK_START_TEMPLATE.md  README.md  VERSION_HISTORY.md
scripts/: build_rag_index.py  generate-gate-definitions.py  generate-manifest.py  install-agent-os.py  install-praxis-os.py  migrate_checkpoints_to_gates.py  safe-upgrade.py  validate-links.py
tests/: conftest.py
universal/: .universal-manifest.json
workflow-authoring/: AGENT_OS_FRAMEWORK_CREATION_GUIDE.md  AGENT_OS_WORKFLOW_CREATION_GUIDE.md  DISTRIBUTION_GUIDE.md  FRAMEWORK_COMPLIANCE_ANALYSIS.md  META_FRAMEWORK_SUMMARY.md  META_WORKFLOW_SUMMARY.md  QUICK_START_TEMPLATE.md  README.md  VERSION_HISTORY.md  WORKFLOW_COMPLIANCE_ANALYSIS.md
(+3204 files in other folders)
